--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/main.js",
-    "serve": "tsc -p ./tsconfig.json -w"
+    "start": "node ./public/main.js",
+    "serve": "tsc -p ./tsconfig.json -w",
+    "types": "gql-gen --config ./codegen.json"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,18 @@
   "homepage": "https://github.com/hyperprivacy/api#readme",
   "dependencies": {
     "apollo-server": "^2.4.2",
+    "glob": "^7.1.3",
     "graphql": "^14.1.1",
+    "graphql-code-generator": "^0.16.1",
     "typescript": "^3.3.3"
   },
   "devDependencies": {
-    "@types/node": "^11.9.4"
+    "@types/glob": "^7.1.1",
+    "@types/graphql": "^14.0.7",
+    "@types/node": "^11.9.4",
+    "graphql-codegen-typescript-client": "^0.16.1",
+    "graphql-codegen-typescript-common": "^0.16.1",
+    "graphql-codegen-typescript-resolvers": "^0.16.1",
+    "graphql-codegen-typescript-server": "^0.16.1"
   }
 }
