--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./public",
     "rootDir": "./src",
-    "module": "esnext",
+    "module": "commonjs",
     "target": "es5",
 
     "moduleResolution": "node",
