--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"glob": "^7.1.3",
 		"graphql": "^14.1.1",
 		"graphql-code-generator": "^0.16.1",
+		"rainbow-node-sdk": "^1.52.0",
 		"typescript": "^3.3.3"
 	},
 	"devDependencies": {
